# iertools

./: .gitmodules  README.md  Untitled.ipynb  development_read_epw.ipynb  fixing_epw.ipynb  pyproject.toml  setup.py
.ipynb_checkpoints/: Untitled-checkpoint.ipynb  develop_read_sql-checkpoint.ipynb  development-checkpoint.ipynb  development_read_epw-checkpoint.ipynb  fixing_epw-checkpoint.ipynb  original_read_sql-checkpoint.ipynb  setup-checkpoint.py
data/: .~lock.eplusmap.csv#  CasablancaTo20.epw  Cuernavaca_MEX_MOR.epw  Tmx_marzoCST.epw  eplusout.rvi
geetools/: calc.py  functions.py  read.py  sun_path.py  sunpath.py  tb.py
idf/: cubo.audit  cubo.bnd  cubo.csv  cubo.eio  cubo.err  cubo.eso  cubo.idf  cubo.mdd  cubo.mtd  cubo.rdd  cubo.rvaudit  cubo.shd  cubo.sql  cuboTable.html
iertools/: calc.py  maps.py  read.py  sunpath.py
iertools/.ipynb_checkpoints/: maps-checkpoint.py  read-checkpoint.py
masks/: mascara_AulaMilenio.npy
notebooks/: 001_calc.ipynb  001_calc_CalculateWindDirectionFromUVW.ipynb  002_tb_thingsboard_download.ipynb  003_sql.ipynb  003_sql_ReadSql_FromEnergyPlus.ipynb  004_sunpath.ipynb  005_epw_ReadEPW.ipynb  005_read_epw_AND_to_epw.ipynb  006_illumination_map_EP.ipynb  007_detecta_mascara.ipynb  007_illuminance_maps.ipynb  008_UDI_AulaMilenio.ipynb  999_develop_illuminance_maps.ipynb  999_testing.ipynb  config_gbv.ini  prueba_JesusFlorido.ipynb
notebooks/.ipynb_checkpoints/: 001_calc_CalculateWindDirectionFromUVW-checkpoint.ipynb  002_tb_DownLoadFromThingsBoard-checkpoint.ipynb  003_sql-checkpoint.ipynb  004_sunpath-checkpoint.ipynb  (+7 more)
